# smart-scenery-ai-hub

./: .gitignore  README.md  analysis_main.py  analysis_summary.xlsx  design.md  test_format_result.txt  test_result.txt  test_vision_result.txt  uv.toml  vision_test_result.txt  ~$胜境 景点结构化数据集.docx  ~$胜境：历史、文化、景点特色与个性化游览指南.docx  景点景区旅游数据行为分析数据 - 副本.csv  灵山胜境.md  说明.md  路线坐标.txt
ai-engine-python/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  setup_env.py  test_api.py
ai-engine-python/config/digital_human/: __init__.py  digital_human_profiles.json  profile_loader.py
ai-engine-python/core/: __init__.py  llm_client.py  rag_processor.py  tts_generator.py
ai-engine-python/data/: report_analysis.json
ai-engine-python/scripts/: __init__.py  import_knowledge.py
backend-java/: mvnw.cmd  pom.xml
digital-human/: README.md  check_model.py  combined_pipeline.py  debug_model.py  inspect_model.py  pre_generate.py  pyproject.toml  sadtalker_engine.py  setup_sadtalker.ps1  test_forward.py
digital-human/config/: digital_human_profiles.json
digital-human/sadtalker-src/: __init__.py
digital-human/sadtalker-src/src/: __init__.py
docs/: API.md  frontend-web-vrm-implementation-plan.md
frontend/: app.js  app.json  app.py  app.wxss  config.js  project.config.json  project.private.config.json
frontend-mp/: app.js  app.json  config.js  package-lock.json  package.json  project.config.json  project.private.config.json
frontend-web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend_new/: index.html  package-lock.json  (+3 more)
(+247 files in other folders)
