[project]
name = "smart-scenery-ai-engine"
version = "2.0.0"
description = "智慧景区 AI 导览引擎 — 多租户 RAG + 流式 LLM + edge-tts 音视解耦"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "python-dotenv>=0.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
# uv 默认使用 .venv 目录，自动从 pyproject.toml 读取依赖
dev-dependencies = []

[tool.uv.pip]
# 兼容 pip 的方式安装
index-url = "https://pypi.org/simple"