[project]
name = "smart-scenery-digital-human"
version = "1.0.0"
description = "Wav2Lip 数字人模块 — AI 生成文本 → TTS → 唇形同步"
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "face-alignment>=1.3.0",
    "openai>=1.30.0",
    "edge-tts>=6.1.0",
    "python-dotenv>=0.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]




[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"

